2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Fix misleading register name.

	* tmac/mdoc/doc-common (Sh):
	* tmac/mdoc/doc-ditroff:
	* tmac/mdoc/doc-nroff: Rename `doc-subheader-indent` to
	`doc-paragraph-indentation`, because the latter is what it's
	used for.

2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_POPPLER): Improve shell code portability.
	Per the GNU Autoconf manual, "The -a, -o, '(', and ')' operands
	are not present in all implementations, and have been marked
	obsolete by Posix 2008.  ...portable uses of test should never
	have more than four arguments, and scripts should use shell
	constructs like '&&' and '||' instead."

2022-10-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp (usage): Use more
	communicative metasyntactic variable names.
	* src/preproc/preconv/preconv.1.man (Synopsis, Options): Align
	with updated usage message.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>
